[package]
name = "age-plugin-hpke"
description = "HPKE plugin for age clients."
version = "0.1.0"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/age-plugin-hpke"
repository = "https://github.com/thibmeu/age-plugin-hpke"
keywords = ["hpke", "age", "cli", "cryptography", "encryption"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
age = "0.9.2"
age-core = "0.9.0"
age-plugin = "0.4.0"
clap = "4.3.21"
clap-verbosity-flag = "2.0.1"
hpke = "0.10.0"
