[package]
name = "age-plugin-hpke"
description = "HPKE plugin for age clients."
version = "0.1.1"
authors = ["Thibault Meunier <crates@thibault.uk>"]
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/thibmeu/age-plugin-hpke"
repository = "https://github.com/thibmeu/age-plugin-hpke"
keywords = ["hpke", "age", "cli", "cryptography", "encryption"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
age = "0.9.2"
age-core = "0.9.0"
age-plugin = "0.4.0"
base64 = "0.21.3"
bech32 = "0.9.1"
bincode = "2.0.0-rc.3"
chrono = "0.4.26"
clap = "4.3.21"
clap-verbosity-flag = "2.0.1"
hpke_pq = { version = "0.10.1", features = ["p384", "xyber768d00"] }
rand = "0.8.5"
